# airsspy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  apt.txt  cryan_patch  postBuild  pyproject.toml  setup.py  spglib_makefile
.github/workflows/: binder-periodic.yml  ci.yml
airss_ase/: __init__.py  build.py  seed.py  test_build.py  test_seed.py
airss_ase/tests/: test_build.py  test_seed.py
airsspy/: __init__.py  build.py  common.py  restools.py  seed.py
airsspy/tests/: __init__.py  conftest.py  test_build.py  test_restools.py  test_seed.py
binder/: environment.yml
examples/: example-1.1.ipynb  example-1.12.ipynb  example-lj-cluster.ipynb
src/airsspy/: __init__.py  build.py  common.py  restools.py  seed.py  utils.py
tests/: conftest.py  test_build.py  test_restools.py  test_seed.py  test_utils.py
